Updated FortressAPI. Generic Exception thrown. Used Generated Serial Version ID for custom exceptions. Added OAuth User Information retrieval.